@@ -1,5 +1,9 @@
 2007-10-16  Sven Neumann  <sven@gimp.org>
 
+	* app/tools/gimpaligntool.c: reduced width of the tool options.
+
+2007-10-16  Sven Neumann  <sven@gimp.org>
+
 	* app/paint/paint-enums.[ch] (GimpPerspectiveCloneMode): changed
 	"Modify Perspective Plane" to "Modify Perspective".
 
